[MINH][FIX] dashboard - top alignment

--- a/portal/src/screen/Dashboard/Dashboard.css
+++ b/portal/src/screen/Dashboard/Dashboard.css
@@ -34,6 +34,7 @@
     display: flex;
     align-items: center;
     position: fixed;
+    transform: translateX(-10px);
     z-index: 3;
 
 }
@@ -71,7 +72,6 @@
 }
 
 .best-match {
-    margin-left: 30px;
     background-color: var(--content-bg-color);
     width: 286px;
     height: 572px;
